# MAX-antivirus

./: .github.rar  CMakeLists.txt  README.md  build.yml  build.yml.txt  main.yml  max.rc  max_guard.c  max_gui.cpp  max_installer_guide.md  max_launcher.py  max_main.c  powerful_clamd.conf  ui_mockup.html  vcpkg.json
.github/workflows/: main.yml
.github/workflows/workflows/: build.yml  main.yml
clamav-main/.github/workflows/: main.yml
